fix(backend): address spotbugs defensive copy issues